@@ -1,0 +1,34 @@
+% Copyright 2024 Japanese TeX Development Community <issue@texjp.org>
+% You may freely use, modify and/or distribute this file.
+%
+\ifx\fmtname\undefined
+  \input basic
+  \def\fmtname{basic}
+  \expandafter\dump
+\fi
+%==================
+\begingroup % Just there to minimize tracing output
+  \tracingmacros=2
+  \tracingonline=1
+%--
+  \newlinechar=10
+  \count255=0
+  \count255=`雪 \relax
+  \message{^^JA: \the\count255^^J}
+  \def\雪{snow}
+  \count255=`\雪 \relax
+  \message{B: \the\count255. 雪\string\雪 \雪^^J}
+  \message{\expandafter\meaning\csname 雪\endcsname.^^J}
+  \message{\expandafter\meaning\csname \Uchar"96EA\endcsname.^^J}%
+  \count4095=0
+  \count4095=`🍌 \relax
+  \message{^^JC: \the\count4095^^J}
+  \def\🍌{banana}
+  \count4095=`\🍌 \relax
+  \message{D: \the\count4095. 🍌\string\🍌 \🍌^^J}
+  \message{\expandafter\meaning\csname 🍌\endcsname.^^J}
+  \message{\expandafter\meaning\csname \Uchar"1F34C\endcsname.^^J}%
+%--
+  \setbox0=\vbox{} % no dvi/xdv/pdf output
+\endgroup
+\end
