@@ -1,3 +1,10 @@
+2024-05-18  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* euptex-ctrlsym.test, tests/ctrlsym.{tex,log},
+	am/euptex.am: Add tests for getting character codes
+	from control symbols by using backquote "`".
+	https://github.com/texjporg/tex-jp-build/issues/167
+
 2024-05-01  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
 
 	* pdfutils.ch: Revert some patches.
